# stm32f4_uvc_rs

./: Cargo.toml  Embed.toml  README.md  memory.x
.cargo/: config
src/: main.rs  uvc_class.rs
